# web_webview

./: .gitignore  AGENT.md  AGENTS.md  AGENT_ZH.md  CLAUDE.md  CODEOWNERS  HOW_TO_ADD_BUILD_FEATURE.md  OAT.xml  README.md  README_ZH.md  bundle.json  config.gni  copy_files.py  prepare.sh
arkweb_utils/: BUILD.gn  README.md  arkweb_preload.cpp  arkweb_preload.h  arkweb_preload_common.cpp  arkweb_preload_common.h  arkweb_utils.cpp  arkweb_utils.h
interfaces/inner_api/: BUILD.gn
interfaces/kits/ani/: BUILD.gn  README.md
interfaces/kits/cj/: BUILD.gn  README.md
interfaces/kits/napi/: BUILD.gn  README.md
interfaces/kits/nativecommon/: BUILD.gn  README.md  full_screen_video_overlay_handler_wrapper.cpp  full_screen_video_overlay_handler_wrapper.h  napi_native_mediaplayer_handler_impl.cpp  napi_native_mediaplayer_handler_impl.h  nweb_user_agent_brand_version_impl.cpp  nweb_user_agent_brand_version_impl.h  nweb_user_agent_metadata_impl.cpp  nweb_user_agent_metadata_impl.h  transfer_referenced_count.h  web_errors.cpp  web_errors.h  web_history_list.cpp  web_history_list.h  web_message_port.cpp  web_message_port.h  web_resource_handler.cpp  web_resource_handler.h  web_scheme_handler_request.cpp  web_scheme_handler_request.h  web_scheme_handler_response.cpp  web_scheme_handler_response.h
interfaces/native/: BUILD.gn  README.md  arkweb_error_code.h  arkweb_interface.cpp  arkweb_interface.h  arkweb_net_error_list.h  arkweb_scheme_handler.cpp  arkweb_scheme_handler.h  arkweb_type.h  libohweb.ndk.json  native_arkweb_utils.cpp  native_interface_arkweb.cpp  native_interface_arkweb.h  native_javascript_execute_callback.cpp
interfaces/native/web_native_messaging_extension/: BUILD.gn
ohos_adapter/: BUILD.gn  BUILD.gn_for_chromium  README.md  build.sh_for_chromium
ohos_adapter/aafwk_adapter/include/: aafwk_app_mgr_client_adapter_impl.h  aafwk_app_mgr_client_adapter_impl_copy.h  aafwk_browser_client_adapter_impl.h  aafwk_browser_host_impl.h  aafwk_render_scheduler_impl.h  ibrowser.h
ohos_adapter/aafwk_adapter/src/: aafwk_app_mgr_client_adapter_impl.cpp  aafwk_browser_client_adapter_impl.cpp  aafwk_browser_host_impl.cpp  aafwk_render_scheduler_impl.cpp
ohos_adapter/access_token_adapter/src/: access_token_adapter_impl.cpp  access_token_adapter_impl_unittest.cpp
ohos_adapter/audio_adapter/include/: audio_capturer_adapter_impl.h  audio_device_desc_adapter_impl.h  audio_renderer_adapter_impl.h  audio_system_manager_adapter_impl.h
ohos_adapter/audio_adapter/src/: audio_adapter_impl_unittest.cpp  audio_capturer_adapter_impl.cpp  audio_renderer_adapter_impl.cpp  audio_renderer_adapter_mock.cpp  audio_system_manager_adapter_impl.cpp
ohos_adapter/background_task_adapter/include/: background_task_impl.h
ohos_adapter/background_task_adapter/src/: background_task_impl.cpp
ohos_adapter/battery_mgr_adapter/include/: battery_mgr_client_adapter_impl.h
ohos_adapter/battery_mgr_adapter/src/: battery_mgr_client_adapter_impl.cpp  battery_mgr_client_adapter_unittest.cpp
ohos_adapter/camera_adapter/include/: camera_manager_adapter_impl.h  camera_rotation_info_adapter_impl.h  format_adapter_impl.h  (+3 more)
ohos_adapter/interfaces/: aafwk_app_mgr_client_adapter.h  aafwk_render_scheduler_host_adapter.h  audio_renderer_adapter.h  audio_system_manager_adapter.h  camera_manager_adapter.h  cert_mgr_adapter.h  datashare_adapter.h  display_manager_adapter.h  hitrace_adapter.h  imf_adapter.h  keystore_adapter.h  location_adapter.h  mmi_adapter.h  ohos_adapter_helper.cpp  ohos_adapter_helper.h  ohos_init_web_adapter.h  ohos_web_data_base_adapter.h  res_sched_client_adapter.h  soc_perf_client_adapter.h  system_properties_adapter.h
ohos_adapter/ohos_adapter_napi/: ohos_adapter_napi.cpp
ohos_adapter/test/: BUILD.gn  ohos_adapter_test_suite.cc  ohos_adapter_test_suite.h  run_all_unittests.cc
ohos_nweb/: BUILD.gn  HOW_TO_ADD_PARAM_CONFIG.md  HOW_TO_ADD_XML_CONFIG.md  README.md
ohos_nweb/etc/: web_config.xml
ohos_nweb/include/: .gitignore  nweb.h  nweb_accessibility_event_callback.h  nweb_accessibility_node_info.h  nweb_adapter_helper.h  nweb_c_api.h  nweb_config_helper.h  nweb_context_menu_params.h  nweb_cookie_manager.h  nweb_data_base.h  nweb_enhance_surface_adapter.h  nweb_file_selector_params.h  nweb_geolocation_callback_interface.h  nweb_handler.h  nweb_helper.h  nweb_history_list.h  nweb_hisysevent.h  nweb_hit_testresult.h  nweb_init_params.h  nweb_javascript_result_callback.h  nweb_js_dialog_result.h  nweb_log.h  nweb_preference.h  nweb_release_surface_callback.h  nweb_save_cookie_callback.h  nweb_security_options_impl.h  nweb_select_popup_menu.h  nweb_snapshot_callback_impl.h  nweb_store_web_archive_callback.h  nweb_surface_adapter.h  nweb_url_resource_error.h  nweb_url_resource_request.h  nweb_url_resource_response.h  nweb_value.h  nweb_value_callback.h  nweb_web_message.h  nweb_window_adapter.h
ohos_nweb/prebuilts/: NOTICE
ohos_nweb/src/: nweb_config_helper.cpp  nweb_crashpad_handler_main.cpp  nweb_enhance_surface_adapter.cpp  nweb_helper.cpp  nweb_hisysevent.cpp  nweb_input_event_consumer.cpp  nweb_surface_adapter.cpp  nweb_window_adapter.cpp
ohos_wrapper/: BUILD.gn  README.md
sa/: 8350.json  BUILD.gn  IAppFwkUpdateService.idl  libapp_fwk_update_service.map
sa/app_fwk_update/: 8350.json  BUILD.gn  README.md  app_fwk_update_service.cfg
sa/include/: app_fwk_update_client.h  app_fwk_update_load_callback.h  app_fwk_update_service.h
sa/src/: app_fwk_update_client.cpp  app_fwk_update_load_callback.cpp  app_fwk_update_service.cpp
sa/web_native_messaging/: 8610.json  BUILD.gn  IWebNativeMessagingService.idl  README.md  libweb_native_messaging_service.map  web_native_messaging_service.cfg
test/: BUILD.gn  README.md
test/ohos_nweb/: nweb_handler_impl_test.cpp  nweb_handler_impl_test.h  nweb_handler_impl_test_for_intercept.cpp  nweb_handler_impl_test_for_intercept.h  nweb_input_event_consumer_test.cpp  nweb_javascript_result_callback_test.cpp  nweb_javascript_result_callback_test.h  nweb_js_dialog_impl_test.cpp  nweb_js_dialog_impl_test.h  nweb_web_render.cpp  ohos_nweb_test.cpp
(+2116 files in other folders)
