# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("ohos_adapter_public_interface") {
  include_dirs = [ "interfaces" ]
}

ohos_shared_library("nweb_ohos_adapter") {
  sources = [
    "aafwk_adapter/src/aafwk_app_mgr_client_adapter_impl.cpp",
    "aafwk_adapter/src/aafwk_render_scheduler_impl.cpp",
    "access_token_adapter/src/access_token_adapter_impl.cpp",
    "audio_adapter/src/audio_capturer_adapter_impl.cpp",
    "audio_adapter/src/audio_renderer_adapter_impl.cpp",
    "audio_adapter/src/audio_system_manager_adapter_impl.cpp",
    "background_task_adapter/src/background_task_impl.cpp",
    "battery_mgr_adapter/src/battery_mgr_client_adapter_impl.cpp",
    "camera_adapter/src/camera_manager_adapter_impl.cpp",
    "cert_mgr_adapter/src/cert_mgr_adapter_impl.cpp",
    "datashare_adapter/src/datashare_adapter_impl.cpp",
    "display_manager_adapter/src/display_manager_adapter_impl.cpp",
    "distributeddatamgr_adapter/webdatabase/src/ohos_web_data_base_adapter_impl.cpp",
    "distributeddatamgr_adapter/webdatabase/src/ohos_web_dns_data_base_adapter_impl.cpp",
    "distributeddatamgr_adapter/webdatabase/src/ohos_web_permission_data_base_adapter_impl.cpp",
    "enterprise_device_management_adapter/src/enterprise_device_management_adapter_impl.cpp",
    "event_handler_adapter/src/event_handler_adapter_impl.cpp",
    "graphic_adapter/src/ashmem_adapter_impl.cpp",
    "graphic_adapter/src/surface_adapter_impl.cpp",
    "graphic_adapter/src/vsync_adapter_impl.cpp",
    "graphic_adapter/src/window_adapter_impl.cpp",
    "hiviewdfx_adapter/src/hilog_adapter.cpp",
    "hiviewdfx_adapter/src/hisysevent_adapter_impl.cpp",
    "hiviewdfx_adapter/src/hitrace_adapter_impl.cpp",
    "inputmethodframework_adapter/src/imf_adapter_impl.cpp",
    "interfaces/ohos_adapter_helper.cpp",
    "keystore_adapter/src/keystore_adapter_impl.cpp",
    "location_adapter/src/location_callback_adapter_impl.cpp",
    "location_adapter/src/location_proxy_adapter_impl.cpp",
    "media_adapter/src/player_framework_adapter_impl.cpp",
    "multimodalinput_adapter/src/mmi_adapter_impl.cpp",
    "multimodalinput_adapter/src/mmi_keyevent_adapter.cpp",
    "net_connect_adapter/src/net_connect_adapter_impl.cpp",
    "net_connect_adapter/src/net_connect_callback_impl.cpp",
    "net_connect_adapter/src/net_connect_utils.cpp",
    "net_proxy_adapter/src/net_proxy_adapter_impl.cpp",
    "ohos_init_web_adapter/src/ohos_init_web_adapter_impl.cpp",
    "ohos_resource_adapter/src/ohos_resource_adapter_impl.cpp",
    "pasteboard_adapter/src/pasteboard_client_adapter_impl.cpp",
    "power_mgr_adapter/src/power_mgr_client_adapter_impl.cpp",
    "pre_dns_adapter/src/nweb_pre_dns_adapter.cpp",
    "print_manager_adapter/src/print_manager_adapter_impl.cpp",
    "res_sched_adapter/src/res_sched_client_adapter_impl.cpp",
    "screen_capture_adapter/src/screen_capture_adapter_impl.cpp",
    "soc_perf_adapter/src/soc_perf_client_adapter_impl.cpp",
    "system_properties_adapter/src/system_properties_adapter_impl.cpp",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
  ]

  include_dirs = [
    "../ohos_nweb/include",
    "aafwk_adapter/include",
    "access_token_adapter/include",
    "audio_adapter/include",
    "battery_mgr_adapter/include",
    "camera_adapter/include",
    "cert_mgr_adapter/include",
    "datashare_adapter/include",
    "display_manager_adapter/include",
    "distributeddatamgr_adapter/webdatabase/include",
    "enterprise_device_management_adapter/include",
    "event_handler_adapter/include",
    "graphic_adapter/include",
    "hiviewdfx_adapter/include",
    "inputmethodframework_adapter/include",
    "keystore_adapter/include",
    "location_adapter/include",
    "media_adapter/include",
    "multimodalinput_adapter/include",
    "net_connect_adapter/include",
    "net_proxy_adapter/include",
    "ohos_init_web_adapter/include",
    "ohos_resource_adapter/include",
    "pasteboard_adapter/include",
    "power_mgr_adapter/include",
    "print_manager_adapter/include",
    "screen_capture_adapter/include",
    "soc_perf_adapter/include",
    "system_properties_adapter/include",
  ]

  public_configs = [ ":ohos_adapter_public_interface" ]

  external_deps = [
    "ability_base:extractortool",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ability_runtime:app_manager",
    "access_token:libaccesstoken_sdk",
    "audio_framework:audio_capturer",
    "audio_framework:audio_client",
    "audio_framework:audio_renderer",
    "av_session:avsession_client",
    "background_task_mgr:bgtaskmgr_innerkits",
    "battery_manager:batterysrv_client",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "camera_framework:camera_framework",
    "cellular_data:tel_cellular_data_api",
    "certificate_manager:cert_manager_sdk",
    "common_event_service:cesfwk_innerkits",
    "core_service:tel_core_service_api",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "enterprise_device_management:edmservice_kits",
    "eventhandler:libeventhandler",
    "file_api:remote_uri_native",
    "graphic_2d:libcomposer",
    "graphic_2d:librender_service_client",
    "graphic_2d:surface",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "huks:libhukssdk",
    "image_framework:image_native",
    "imf:inputmethod_client",
    "init:libbegetutil",
    "input:libmmi-client",
    "ipc:ipc_core",
    "location:lbsservice_common",
    "location:locator_sdk",
    "napi:ace_napi",
    "netmanager_base:net_conn_manager_if",
    "pasteboard:pasteboard_client",
    "player_framework:media_client",
    "power_manager:powermgr_client",
    "print_fwk:print_client",
    "relational_store:native_rdb",
    "resource_schedule_service:ressched_client",
    "samgr:samgr_proxy",
    "window_manager:libdm",
  ]

  if (defined(global_parts_info.resourceschedule_soc_perf)) {
    external_deps += [ "soc_perf:socperf_client" ]
    defines = [ "NWEB_SOC_PERF" ]
  }
  innerapi_tags = [ "platformsdk" ]
  part_name = "webview"
  subsystem_name = "web"
}
